Here's the commented version of the code:

```c++
// Copyright 2023 The gRPC Authors

#include <grpc/support/port_platform.h>

#ifdef GPR_APPLE
#include <AvailabilityMacros.h>
#ifdef AVAILABLE_MAC_OS_X_VERSION_10_12_AND_LATER

#include <CoreFoundation/CoreFoundation.h>
#include <grpc/support/cpu.h>

#include "absl/log/check.h"
#include "absl/log/log.h"
#include "src/core/lib/event_engine/cf_engine/cf_engine.h"
#include "src/core/lib/event_engine/cf_engine/cfstream_endpoint.h"
#include "src/core/lib/event_engine/cf_engine/dns_service_resolver.h"
#include "src/core/lib/event_engine/posix_engine/timer_manager.h"
#include "src/core/lib/event_engine/tcp_socket_utils.h"
#include "src/core/lib/event_engine/thread_pool/thread_pool.h"
#include "src/core/lib/event_engine/utils.h"
#include "src/core/util/crash.h"
#include "src/core/util/useful.h"

// Maximum thread pool size for CFStream operations
#ifndef GRPC_CFSTREAM_MAX_THREADPOOL_SIZE
#define GRPC_CFSTREAM_MAX_THREADPOOL_SIZE 16u
#endif

namespace grpc_event_engine::experimental {

// Closure implementation for CFEventEngine tasks
struct CFEventEngine::Closure final : public EventEngine::Closure {
  absl::AnyInvocable<void()> cb;  // The callback to be executed
  Timer timer;                    // Timer associated with this closure
  CFEventEngine* engine;          // Pointer to parent engine
  EventEngine::TaskHandle handle; // Task handle for this closure

  void Run() override {
    GRPC_TRACE_LOG(event_engine, INFO)
        << "CFEventEngine:" << engine << " executing callback:" << handle;
    {
      // Remove the handle from known handles before execution
      grpc_core::MutexLock lock(&engine->task_mu_);
      engine->known_handles_.erase(handle);
    }
    cb();    // Execute the callback
    delete this;  // Clean up after execution
  }
};

// Constructor initializes thread pool with size between 2 and GRPC_CFSTREAM_MAX_THREADPOOL_SIZE
// based on available CPU cores
CFEventEngine::CFEventEngine()
    : thread_pool_(MakeThreadPool(grpc_core::Clamp(
          gpr_cpu_num_cores(), 2u,
          static_cast<unsigned int>(GRPC_CFSTREAM_MAX_THREADPOOL_SIZE)))),
      timer_manager_(thread_pool_) {}

// Destructor ensures all tasks are cleaned up and resources are properly released
CFEventEngine::~CFEventEngine() {
  {
    grpc_core::MutexLock lock(&task_mu_);
    if (GRPC_TRACE_FLAG_ENABLED(event_engine)) {
      for (auto handle : known_handles_) {
        LOG(ERROR) << "CFEventEngine:" << this
                   << " uncleared TaskHandle at shutdown:"
                   << HandleToString(handle);
      }
    }
    CHECK(GPR_LIKELY(known_handles_.empty()));
    timer_manager_.Shutdown();  // Stop the timer manager
  }
  thread_pool_->Quiesce();  // Shut down the thread pool
}

// Unimplemented listener creation method
absl::StatusOr<std::unique_ptr<EventEngine::Listener>>
CFEventEngine::CreateListener(
    Listener::AcceptCallback ,
    absl::AnyInvocable<void(absl::Status)> ,
    const EndpointConfig& ,
    std::unique_ptr<MemoryAllocatorFactory> ) {
  grpc_core::Crash("unimplemented");
}

// Establishes a connection to the specified address
CFEventEngine::ConnectionHandle CFEventEngine::Connect(
    OnConnectCallback on_connect, const ResolvedAddress& addr,
    const EndpointConfig& , MemoryAllocator memory_allocator,
    Duration timeout) {
  // Create a new CFStreamEndpoint for the connection
  auto endpoint_ptr = new CFStreamEndpoint(
      std::static_pointer_cast<CFEventEngine>(shared_from_this()),
      std::move(memory_allocator));

  // Create a handle for this connection
  ConnectionHandle handle{reinterpret_cast<intptr_t>(endpoint_ptr), 0};
  {
    grpc_core::MutexLock lock(&conn_mu_);
    conn_handles_.insert(handle);  // Track the connection handle
  }

  // Set up a timeout timer for the connection
  auto deadline_timer =
      RunAfter(timeout, [handle, that = std::static_pointer_cast<CFEventEngine>(
                                     shared_from_this())]() {
        that->CancelConnectInternal(
            handle, absl::DeadlineExceededError("Connect timed out"));
      });

  // Wrapper callback that handles connection completion
  auto on_connect2 =
      [that = std::static_pointer_cast<CFEventEngine>(shared_from_this()),
       deadline_timer, handle,
       on_connect = std::move(on_connect)](absl::Status status) mutable {
        // Cancel the timeout timer
        that->Cancel(deadline_timer);

        {
          // Remove the connection handle from tracking
          grpc_core::MutexLock lock(&that->conn_mu_);
          that->conn_handles_.erase(handle);
        }

        auto endpoint_ptr = reinterpret_cast<CFStreamEndpoint*>(handle.keys[0]);

        if (!status.ok()) {
          // Connection failed - call callback with error status
          on_connect(std::move(status));
          delete endpoint_ptr;
          return;
        }

        // Connection succeeded - pass endpoint to callback
        on_connect(std::unique_ptr<EventEngine::Endpoint>(endpoint_ptr));
      };

  // Initiate the actual connection
  endpoint_ptr->Connect(std::move(on_connect2), addr);

  return handle;
}

// Attempts to cancel an ongoing connection
bool CFEventEngine::CancelConnect(ConnectionHandle handle) {
  CancelConnectInternal(handle, absl::CancelledError("CancelConnect"));
  return false;
}

// Internal implementation of connection cancellation
bool CFEventEngine::CancelConnectInternal(ConnectionHandle handle,
                                          absl::Status status) {
  grpc_core::MutexLock lock(&conn_mu_);

  if (!conn_handles_.contains(handle)) {
    GRPC_TRACE_LOG(event_engine, INFO)
        << "Unknown connection handle: " << handle;
    return false;
  }
  conn_handles_.erase(handle);

  // Forward cancellation to the endpoint
  auto endpoint_ptr = reinterpret_cast<CFStreamEndpoint*>(handle.keys[0]);
  return endpoint_ptr->CancelConnect(status);
}

// Unimplemented worker thread check
bool CFEventEngine::IsWorkerThread() { grpc_core::Crash("unimplemented"); }

// Creates a DNS resolver instance
absl::StatusOr<std::unique_ptr<EventEngine::DNSResolver>>
CFEventEngine::GetDNSResolver(const DNSResolver::ResolverOptions& options) {
  if (!options.dns_server.empty()) {
    return absl::InvalidArgumentError(
        "CFEventEngine does not support custom DNS servers");
  }

  return std::make_unique<DNSServiceResolver>(
      std::static_pointer_cast<CFEventEngine>(shared_from_this()));
}

// Runs a closure on the thread pool
void CFEventEngine::Run(EventEngine::Closure* closure) {
  thread_pool_->Run(closure);
}

// Runs a callable on the thread pool
void CFEventEngine::Run(absl::AnyInvocable<void()> closure) {
  thread_pool_->Run(std::move(closure));
}

// Schedules a closure to run after a delay
EventEngine::TaskHandle CFEventEngine::RunAfter(Duration when,
                                                EventEngine::Closure* closure) {
  return RunAfterInternal(when, [closure]() { closure->Run(); });
}

// Schedules a callable to run after a delay
EventEngine::TaskHandle CFEventEngine::RunAfter(
    Duration when, absl::AnyInvocable<void()> closure) {
  return RunAfterInternal(when, std::move(closure));
}

// Cancels a scheduled task
bool CFEventEngine::Cancel(TaskHandle handle) {
  grpc_core::MutexLock lock(&task_mu_);
  if (!known_handles_.contains(handle)) return false;
  auto* cd = reinterpret_cast<Closure*>(handle.keys[0]);
  bool r = timer_manager_.TimerCancel(&cd->timer);
  known_handles_.erase(handle);
  if (r) delete cd;
  return r;
}

// Internal implementation of delayed task scheduling
EventEngine::TaskHandle CFEventEngine::RunAfterInternal(
    Duration when, absl::AnyInvocable<void()> cb) {
  auto when_ts = ToTimestamp(timer_manager_.Now(), when);
  auto* cd = new Closure;
  cd->cb = std::move(cb);
  cd->engine = this;
  EventEngine::TaskHandle handle{reinterpret_cast<intptr_t>(cd),
                                 aba_token_.fetch_add(1)};
  grpc_core::MutexLock lock(&task_mu_);
  known_handles_.insert(handle);  // Track the new task handle
  cd->handle = handle;
  GRPC_TRACE_LOG(event_engine, INFO)
      << "CFEventEngine:" << this << " scheduling callback:" << handle;
  timer_manager_.TimerInit(&cd->timer, when_ts, cd);  // Schedule the timer
  return handle;
}

}

#endif
#endif
```